# stonedinary

./: .gitignore  ANDROID.md  README.md  TEST_PLAN.md  TEST_REPORT.md  capacitor.config.ts  index.html  package-lock.json  package.json
android/app/: build.gradle
android/app/src/main/res/values/: strings.xml
release-assets/2026-03-14-v0.1.1-history-import-merge/: README.md
release-assets/2026-03-21-v0.1.3-session-restore/: README.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/app/: router.tsx
src/components/auth/: AuthScreen.tsx
src/components/entry-wizard/: EntryWizard.tsx
src/components/layout/: AppLayout.tsx
src/components/shared/: ValidationHint.tsx  WritingHintCard.tsx
src/db/: client.ts  migrate.ts  mobileStore.ts
src/db/migrations/: 001_initial.sql
src/db/repositories/: appSettingsRepository.ts  authRepository.ts  entriesRepository.ts  reviewsRepository.ts  stonesRepository.ts
src/pages/history/: HistoryPage.tsx
src/pages/reviews/: ReviewsPage.tsx
src/pages/settings/: SettingsPage.tsx
src/pages/stones/: StonesPage.tsx
src/pages/today/: TodayPage.tsx
src/platform/: runtime.ts
src/services/: backupService.ts  bootstrap.ts  databaseService.ts  exportService.ts  importService.ts  logger.ts
src/stores/: authStore.ts  entryDraftStore.ts
src/types/: auth.ts  entry.ts  writing.ts
src/utils/: entryEvents.ts  entryMapper.ts  guides.ts  reviewPeriods.ts  security.ts  validation.ts
(+1 files in other folders)
